test/types/enum/sungeun/cast_enum_weird_oor_3.good
cast_enum_weird_oor_3.chpl:2: error: enum cast out of bounds
