test/types/enum/sungeun/cast_enum_weird_oor_3.chpl
enum blah { a=-14, b=2, c=0, d=-25 };
var b = 7:blah;

writeln(b);
